src/main/java/com/hong/udf/antlr/SqlParser.java
// Generated from F:/Self Project/UDF_Antlr/src/main/resources\SqlParser.g4 by ANTLR 4.9.2
package com.hong.udf.antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_LINE_COMMENT=1, MULTILINE_COMMENT=2, SPACES=3, ALL=4, AND=5, AS=6, 
		BETWEEN=7, BIT=8, BY=9, CASE=10, CAST=11, CHAR=12, CHARACTER=13, CROSS=14, 
		DEC=15, DECIMAL=16, DISTINCT=17, DOUBLE=18, ELSE=19, END=20, EXISTS=21, 
		EXPLAIN=22, FROM=23, FULL=24, FLOAT=25, HAVING=26, JOIN=27, IN=28, INNER=29, 
		INT=30, INTEGER=31, IS=32, LIMIT=33, NATURAL=34, NULL=35, NOT=36, NUMERIC=37, 
		GROUP=38, ON=39, OR=40, ORDER=41, OUTER=42, PRECISION=43, REAL=44, SELECT=45, 
		SMALLINT=46, THEN=47, USING=48, VARCHAR=49, VARYING=50, WHEN=51, WHERE=52, 
		WITH=53, ZONE=54, STAR=55, DIVIDE=56, MODULE=57, PLUS=58, MINUSMINUS=59, 
		MINUS=60, DIV=61, GT=62, LT=63, GE=64, LE=65, EQUAL=66, NOT_EQUAL=67, 
		ASSIGN=68, BIT_OR=69, ASCII=70, CHAR_LENGTH=71, CHARACTER_LENGTH=72, CONCAT=73, 
		CONCAT_WS=74, FIELD=75, FIND_IN_SET=76, FORMAT=77, INSERT=78, LOCATE=79, 
		LCASE=80, LEFT=81, LOWER=82, LPAD=83, LTRIM=84, MID=85, POSITION=86, REPEAT=87, 
		REPLACE=88, REVERSE=89, RIGHT=90, RPAD=91, RTRIM=92, SPACE=93, STRCMP=94, 
		SUBSTR=95, SUBSTRING=96, SUBSTRING_INDEX=97, TRIM=98, UCASE=99, UPPER=100, 
		ABS=101, ACOS=102, ASIN=103, ATAN=104, ATAN2=105, AVG=106, CEIL=107, CEILING=108, 
		COS=109, COT=110, COUNT=111, DEGREES=112, EXP=113, FLOOR=114, GREATEST=115, 
		LEAST=116, LN=117, LOG=118, LOG10=119, LOG2=120, MAX=121, MIN=122, MOD=123, 
		PI=124, POW=125, POWER=126, RADIANS=127, RAND=128, ROUND=129, SIGN=130, 
		SIN=131, SQRT=132, SUM=133, TAN=134, TRUNCATE=135, ADDDATE=136, ADDTIME=137, 
		CURDATE=138, CURRENT_DATE=139, CURRENT_TIME=140, CURRENT_TIMESTAMP=141, 
		CURTIME=142, DATE=143, DATEDIFF=144, DATE_ADD=145, DATE_FORMAT=146, DATE_SUB=147, 
		DAY=148, DAYNAME=149, DAYOFMONTH=150, DAYOFWEEK=151, DAYOFYEAR=152, EXTRACT=153, 
		FROM_DAYS=154, HOUR=155, LAST_DAY=156, LOCALTIME=157, LOCALTIMESTAMP=158, 
		MAKEDATE=159, MAKETIME=160, MICROSECOND=161, MINUTE=162, MONTHNAME=163, 
		MONTH=164, NOW=165, PERIOD_ADD=166, PERIOD_DIFF=167, QUARTER=168, SECOND=169, 
		SEC_TO_TIME=170, STR_TO_DATE=171, SUBDATE=172, SUBTIME=173, SYSDATE=174, 
		TIME=175, TIME_FORMAT=176, TIME_TO_SEC=177, TIMEDIFF=178, TIMESTAMP=179, 
		TIMESTAMPDIFF=180, TO_DAYS=181, WEEK=182, WEEKDAY=183, WEEKOFYEAR=184, 
		YEAR=185, YEARWEEK=186, IDENTIFIER=187, STRING_LITERAL=188, NUMERIC_LITERAL=189, 
		DOT=190, LR_BRACKET=191, RR_BRACKET=192, COMMA=193, SEMI=194, AT_SIGN=195, 
		ZERO_DECIMAL=196, ONE_DECIMAL=197, TWO_DECIMAL=198, TEN_DECIMAL=199, SINGLE_QUOTE_SYMB=200, 
		DOUBLE_QUOTE_SYMB=201, REVERSE_QUOTE_SYMB=202, COLON_SYMB=203;
	public static final int
		RULE_parse = 0, RULE_select_stmt_list = 1, RULE_error = 2, RULE_select_stmt = 3, 
		RULE_set_qualifier = 4, RULE_element_clause = 5, RULE_element = 6, RULE_expr = 7, 
		RULE_from_clause = 8, RULE_table_reference = 9, RULE_table_alias_specification = 10, 
		RULE_joined_clause = 11, RULE_join_operator = 12, RULE_join_constraint = 13, 
		RULE_where_clause = 14, RULE_where_link_semi = 15, RULE_group_by_clause = 16, 
		RULE_order_by_clause = 17, RULE_limit_clause = 18, RULE_unary_operator = 19, 
		RULE_column_alias = 20, RULE_domain_name = 21, RULE_table_name = 22, RULE_column_name = 23, 
		RULE_database_name = 24, RULE_table_alias = 25, RULE_any_name = 26, RULE_literal_value = 27, 
		RULE_type_name = 28, RULE_type_classify = 29, RULE_character_string_type = 30, 
		RULE_bit_string_type = 31, RULE_numeric_type = 32, RULE_exact_numeric_type = 33, 
		RULE_approximate_numeric_type = 34, RULE_datetime_type = 35, RULE_length = 36, 
		RULE_precision = 37, RULE_scala = 38, RULE_time_precision = 39, RULE_timestamp_precision = 40, 
		RULE_time_fractional_seconds_precision = 41, RULE_origin_function_name = 42, 
		RULE_udf_function_name = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "select_stmt_list", "error", "select_stmt", "set_qualifier", 
			"element_clause", "element", "expr", "from_clause", "table_reference", 
			"table_alias_specification", "joined_clause", "join_operator", "join_constraint", 
			"where_clause", "where_link_semi", "group_by_clause", "order_by_clause", 
			"limit_clause", "unary_operator", "column_alias", "domain_name", "table_name", 
			"column_name", "database_name", "table_alias", "any_name", "literal_value", 
			"type_name", "type_classify", "character_string_type", "bit_string_type", 
			"numeric_type", "exact_numeric_type", "approximate_numeric_type", "datetime_type", 
			"length", "precision", "scala", "time_precision", "timestamp_precision", 
			"time_fractional_seconds_precision", "origin_function_name", "udf_function_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'*'", "'/'", "'%'", "'+'", 
			"'--'", "'-'", "'DIV'", "'>'", "'<'", "'>='", "'<='", "'=='", null, "'='", 
			"'||'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'.'", "'('", "')'", "','", "';'", "'@'", "'0'", "'1'", "'2'", 
			"'10'", "'''", "'\"'", "'`'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "ALL", "AND", 
			"AS", "BETWEEN", "BIT", "BY", "CASE", "CAST", "CHAR", "CHARACTER", "CROSS", 
			"DEC", "DECIMAL", "DISTINCT", "DOUBLE", "ELSE", "END", "EXISTS", "EXPLAIN", 
			"FROM", "FULL", "FLOAT", "HAVING", "JOIN", "IN", "INNER", "INT", "INTEGER", 
			"IS", "LIMIT", "NATURAL", "NULL", "NOT", "NUMERIC", "GROUP", "ON", "OR", 
			"ORDER", "OUTER", "PRECISION", "REAL", "SELECT", "SMALLINT", "THEN", 
			"USING", "VARCHAR", "VARYING", "WHEN", "WHERE", "WITH", "ZONE", "STAR", 
			"DIVIDE", "MODULE", "PLUS", "MINUSMINUS", "MINUS", "DIV", "GT", "LT", 
			"GE", "LE", "EQUAL", "NOT_EQUAL", "ASSIGN", "BIT_OR", "ASCII", "CHAR_LENGTH", 
			"CHARACTER_LENGTH", "CONCAT", "CONCAT_WS", "FIELD", "FIND_IN_SET", "FORMAT", 
			"INSERT", "LOCATE", "LCASE", "LEFT", "LOWER", "LPAD", "LTRIM", "MID", 
			"POSITION", "REPEAT", "REPLACE", "REVERSE", "RIGHT", "RPAD", "RTRIM", 
			"SPACE", "STRCMP", "SUBSTR", "SUBSTRING", "SUBSTRING_INDEX", "TRIM", 
			"UCASE", "UPPER", "ABS", "ACOS", "ASIN", "ATAN", "ATAN2", "AVG", "CEIL", 
			"CEILING", "COS", "COT", "COUNT", "DEGREES", "EXP", "FLOOR", "GREATEST", 
			"LEAST", "LN", "LOG", "LOG10", "LOG2", "MAX", "MIN", "MOD", "PI", "POW", 
			"POWER", "RADIANS", "RAND", "ROUND", "SIGN", "SIN", "SQRT", "SUM", "TAN", 
			"TRUNCATE", "ADDDATE", "ADDTIME", "CURDATE", "CURRENT_DATE", "CURRENT_TIME", 
			"CURRENT_TIMESTAMP", "CURTIME", "DATE", "DATEDIFF", "DATE_ADD", "DATE_FORMAT", 
			"DATE_SUB", "DAY", "DAYNAME", "DAYOFMONTH", "DAYOFWEEK", "DAYOFYEAR", 
			"EXTRACT", "FROM_DAYS", "HOUR", "LAST_DAY", "LOCALTIME", "LOCALTIMESTAMP", 
			"MAKEDATE", "MAKETIME", "MICROSECOND", "MINUTE", "MONTHNAME", "MONTH", 
			"NOW", "PERIOD_ADD", "PERIOD_DIFF", "QUARTER", "SECOND", "SEC_TO_TIME", 
			"STR_TO_DATE", "SUBDATE", "SUBTIME", "SYSDATE", "TIME", "TIME_FORMAT", 
			"TIME_TO_SEC", "TIMEDIFF", "TIMESTAMP", "TIMESTAMPDIFF", "TO_DAYS", "WEEK", 
			"WEEKDAY", "WEEKOFYEAR", "YEAR", "YEARWEEK", "IDENTIFIER", "STRING_LITERAL", 
			"NUMERIC_LITERAL", "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMI", 
			"AT_SIGN", "ZERO_DECIMAL", "ONE_DECIMAL", "TWO_DECIMAL", "TEN_DECIMAL", 
			"SINGLE_QUOTE_SYMB", "DOUBLE_QUOTE_SYMB", "REVERSE_QUOTE_SYMB", "COLON_SYMB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public Select_stmt_listContext select_stmt_list() {
			return getRuleContext(Select_stmt_listContext.class,0);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				select_stmt_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_stmt_listContext extends ParserRuleContext {
		public List<Select_stmtContext> select_stmt() {
			return getRuleContexts(Select_stmtContext.class);
		}
		public Select_stmtContext select_stmt(int i) {
			return getRuleContext(Select_stmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(SqlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(SqlParser.SEMI, i);
		}
		public Select_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stmt_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterSelect_stmt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitSelect_stmt_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitSelect_stmt_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_stmt_listContext select_stmt_list() throws RecognitionException {
		Select_stmt_listContext _localctx = new Select_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(92);
				match(SEMI);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			select_stmt();
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(99);
						match(SEMI);
						}
						}
						setState(102); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SEMI );
					setState(104);
					select_stmt();
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(110);
				match(SEMI);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token input;
		public TerminalNode SELECT() { return getToken(SqlParser.SELECT, 0); }
		public TerminalNode EXPLAIN() { return getToken(SqlParser.EXPLAIN, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitError(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitError(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_error);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((ErrorContext)_localctx).input = _input.LT(1);
			_la = _input.LA(1);
			if ( _la <= 0 || (_la==EXPLAIN || _la==SELECT) ) {
				((ErrorContext)_localctx).input = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}

			  throw new RuntimeException(((ErrorContext)_localctx).input.getText());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_stmtContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(SqlParser.SELECT, 0); }
		public Element_clauseContext element_clause() {
			return getRuleContext(Element_clauseContext.class,0);
		}
		public TerminalNode EXPLAIN() { return getToken(SqlParser.EXPLAIN, 0); }
		public Set_qualifierContext set_qualifier() {
			return getRuleContext(Set_qualifierContext.class,0);
		}
		public From_clauseContext from_clause() {
			return getRuleContext(From_clauseContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Group_by_clauseContext group_by_clause() {
			return getRuleContext(Group_by_clauseContext.class,0);
		}
		public Order_by_clauseContext order_by_clause() {
			return getRuleContext(Order_by_clauseContext.class,0);
		}
		public Limit_clauseContext limit_clause() {
			return getRuleContext(Limit_clauseContext.class,0);
		}
		public Select_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterSelect_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitSelect_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitSelect_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_stmtContext select_stmt() throws RecognitionException {
		Select_stmtContext _localctx = new Select_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_select_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPLAIN) {
				{
				setState(119);
				match(EXPLAIN);
				}
			}

			setState(122);
			match(SELECT);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALL || _la==DISTINCT) {
				{
				setState(123);
				set_qualifier();
				}
			}

			setState(126);
			element_clause();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(127);
				from_clause();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(130);
				where_clause();
				}
			}

			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(133);
				group_by_clause();
				}
			}

			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(136);
				order_by_clause();
				}
			}

			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(139);
				limit_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_qualifierContext extends ParserRuleContext {
		public TerminalNode DISTINCT() { return getToken(SqlParser.DISTINCT, 0); }
		public TerminalNode ALL() { return getToken(SqlParser.ALL, 0); }
		public Set_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterSet_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitSet_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitSet_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_qualifierContext set_qualifier() throws RecognitionException {
		Set_qualifierContext _localctx = new Set_qualifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_set_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !(_la==ALL || _la==DISTINCT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
